[package]
name = "zcash_pool_migration_backend"
description = "Backend-agnostic value-pool migration engine for Zcash wallets"
version = "0.1.0"
authors = [
    "Danny Willems <be.danny.willems@gmail.com>",
    "John Boyd <john@coldnoise.net>",
    "Michal Fousek <michal.fousek@chlup.info>",
]
homepage = "https://github.com/zcash/librustzcash"
repository.workspace = true
readme = "README.md"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
rand_core.workspace = true
zcash_primitives.workspace = true
zcash_protocol.workspace = true

# Enabled by the `orchard` feature.
orchard = { workspace = true, optional = true }
pczt = { workspace = true, optional = true, features = [
    "io-finalizer",
    "orchard",
    "signer",
    "zcp-builder",
] }

[dev-dependencies]
incrementalmerkletree.workspace = true
proptest.workspace = true
rand_chacha.workspace = true
# The `local-consensus` feature exposes `LocalNetwork`, used to build the migration transactions
# against regtest params with the relevant network upgrades (including NU6.3) active.
zcash_protocol = { workspace = true, features = ["local-consensus"] }

[features]
## Builds the pure PCZT transaction builder (the `build` module), which turns a note-split plan and
## the cryptographic ingredients a wallet supplies into an unproven migration PCZT. Requires the
## Orchard pool; pulls in `orchard` and `pczt`. The caller supplies the RNG, so no `rand` dependency
## is added.
orchard = ["dep:orchard", "dep:pczt"]

[lints]
workspace = true
