[package]
name = "zcash_pool_migration_backend"
description = "Backend-agnostic value-pool migration engine for Zcash wallets"
version = "0.1.0"
authors = [
    "Danny Willems <be.danny.willems@gmail.com>",
    "John Boyd <john@coldnoise.net>",
    "Michal Fousek <michal.fousek@chlup.info>",
]
homepage = "https://github.com/zcash/librustzcash"
repository.workspace = true
readme = "README.md"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
corez.workspace = true
getset.workspace = true
libm.workspace = true
rand_core.workspace = true
zcash_primitives.workspace = true
zcash_protocol.workspace = true

# Enabled by the `test-dependencies` feature: the `testing` module's proptest strategies and
# conformance suite, reusable by downstream store crates.
proptest = { workspace = true, optional = true }

# Enabled by the `orchard` feature.
orchard = { workspace = true, optional = true }
pczt = { workspace = true, optional = true, features = [
    "io-finalizer",
    "orchard",
    "prover",
    "signer",
    "zcp-builder",
] }

# Enabled by the `wallet` feature: the wallet-backed adapter, sourcing the migration's cryptographic
# ingredients from a `zcash_client_backend` wallet instead of a hand-written `MigrationCrypto`.
zcash_client_backend = { workspace = true, optional = true, features = ["orchard"] }
zcash_keys = { workspace = true, optional = true, features = ["orchard"] }
shardtree = { workspace = true, optional = true }
incrementalmerkletree = { workspace = true, optional = true }

[dev-dependencies]
incrementalmerkletree.workspace = true
pczt = { workspace = true, features = ["orchard", "tx-extractor"] }
prost.workspace = true
proptest.workspace = true
rand_chacha.workspace = true
rusqlite.workspace = true
shardtree.workspace = true
tempfile.workspace = true
# The wallet-backed real-proving E2E (`tests/prove_chain_sim.rs`) drives a real in-memory
# `WalletDb` through the `zcash_client_backend` testing framework: fund an account, commit a
# migration, then prove + mine + scan the preparation and prove the transfer against the wallet's
# own Orchard commitment tree. `zcash_proofs` supplies the halo2 proving parameters.
zcash_client_backend = { workspace = true, features = ["orchard", "test-dependencies"] }
zcash_client_sqlite = { workspace = true, features = ["orchard", "test-dependencies"] }
zcash_proofs.workspace = true

# The `local-consensus` feature exposes `LocalNetwork`, used to build the migration transactions
# against regtest params with the relevant network upgrades (including NU6.3) active.
zcash_protocol = { workspace = true, features = ["local-consensus", "test-dependencies"] }

# Shared, test-only in-memory backends (`MockBackend`, `CommitMock`) and witness
# helpers the engine tests use. The dev-dependency cycle back onto this crate is fine: dev-deps do
# not enter the normal build graph (the same relationship zcash_client_memory has with
# zcash_client_backend).
zcash_pool_migration_memory = { path = "../zcash_pool_migration_memory" }

[features]
## Builds the pure PCZT transaction builder (the `build` module), which turns a note-split plan and
## the cryptographic ingredients a wallet supplies into an unproven migration PCZT. Requires the
## Orchard pool; pulls in `orchard` and `pczt`. The caller supplies the RNG, so no `rand` dependency
## is added.
orchard = ["dep:orchard", "dep:pczt"]
## Builds the wallet-backed adapter (`wallet` module): a `WalletMigration` that implements the
## engine's backend/crypto/store traits over a `zcash_client_backend` wallet, so any such wallet is a
## migration wallet with no hand-wired crypto. Implies `orchard`.
wallet = [
    "orchard",
    "dep:zcash_client_backend",
    "dep:zcash_keys",
    "dep:shardtree",
    "dep:incrementalmerkletree",
]
## Exposes the `testing` module: reusable `proptest` strategies for the engine's persisted types and
## a backend-agnostic conformance suite for the `PoolMigrationRead` / `PoolMigrationWrite` store
## traits. A downstream store crate enables it as a dev-dependency feature to reuse them.
test-dependencies = [
    "dep:proptest",
    "zcash_primitives/test-dependencies",
    "zcash_protocol/test-dependencies",
]
## A marker that tracks `zcash_client_backend`'s `transparent-inputs` feature so the funded-wallet
## end-to-end test's `DataStoreFactory` implementation matches the trait, whose `new_data_store`
## gains a `gap_limits` parameter under `transparent-inputs`. It intentionally enables nothing on its
## own: under a `--workspace` build (all workspace members get `transparent-inputs` together) and
## under `--all-features`, this is on exactly when the wallet crates' `transparent-inputs` is, which
## is the only build that compiles that test (it needs `wallet` too).
transparent-inputs = []

[lints]
workspace = true
