[package]
name = "zcash_primitives"
description = "Rust implementations of the Zcash primitives"
version = "0.13.0-rc.1"
authors = [
    "Jack Grigg <jack@z.cash>",
    "Kris Nuttycombe <kris@electriccoin.co>"
]
homepage = "https://github.com/zcash/librustzcash"
repository = "https://github.com/zcash/librustzcash"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.65"
categories = ["cryptography::cryptocurrencies"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
equihash = { version = "0.2", path = "../components/equihash" }
zcash_address = { version = "0.3", path = "../components/zcash_address" }
zcash_encoding = { version = "0.2", path = "../components/zcash_encoding" }

# Dependencies exposed in a public API:
# (Breaking upgrades to these require a breaking upgrade to this crate.)
# - CSPRNG
rand = "0.8"
rand_core = "0.6"

# - Digests (output types exposed)
blake2b_simd = "1"
sha2 = "0.10"

# - Metrics
memuse = "0.2.1"

# - Secret management
subtle = "2.2.3"

# - Shielded protocols
bls12_381 = "0.8"
ff = "0.13"
group = { version = "0.13", features = ["wnaf-memuse"] }
jubjub = "0.10"
nonempty = "0.7"
orchard = { version = "0.6", default-features = false }

# - Note Commitment Trees
incrementalmerkletree = { version = "0.5", features = ["legacy-api"] }

# - Static constants
lazy_static = "1"

# - Test dependencies
proptest = { version = "1.0.0", optional = true }

# - Transparent inputs
#   - `Error` type exposed
hdwallet = { version = "0.4", optional = true }
#   - `SecretKey` and `PublicKey` types exposed
secp256k1 = { version = "0.26", optional = true }

# - ZIP 339
bip0039 = { version = "0.10", features = ["std", "all-languages"] }

# Dependencies used internally:
# (Breaking upgrades to these are usually backwards-compatible, but check MSRVs.)
# - Encodings
byteorder = "1"
hex = "0.4"

# - Shielded protocols
bitvec = "1"
blake2s_simd = "1"

# - Transparent inputs
ripemd = { version = "0.1", optional = true }

# - ZIP 32
aes = "0.8"
fpe = "0.6"

[dependencies.zcash_note_encryption]
version = "0.4"
features = ["pre-zip-212"]

[dev-dependencies]
chacha20poly1305 = "0.10"
criterion = "0.4"
incrementalmerkletree = { version = "0.5", features = ["legacy-api", "test-dependencies"] }
proptest = "1.0.0"
assert_matches = "1.3.0"
rand_xorshift = "0.3"
orchard = { version = "0.6", default-features = false, features = ["test-dependencies"] }

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.11", features = ["criterion", "flamegraph"] } # MSRV 1.56

[features]
default = ["multicore"]
multicore = ["orchard/multicore"]
transparent-inputs = ["hdwallet", "ripemd", "secp256k1"]
temporary-zcashd = []
test-dependencies = ["proptest", "orchard/test-dependencies"]
zfuture = []

[lib]
bench = false

[[bench]]
name = "note_decryption"
harness = false

[[bench]]
name = "pedersen_hash"
harness = false

[badges]
maintenance = { status = "actively-developed" }
