[package]
name = "zcash_primitives"
description = "Rust implementations of the Zcash primitives"
version = "0.21.0"
authors = [
    "Jack Grigg <jack@z.cash>",
    "Kris Nuttycombe <kris@electriccoin.co>"
]
homepage = "https://github.com/zcash/librustzcash"
repository.workspace = true
readme = "README.md"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
equihash.workspace = true
zcash_address.workspace = true
zcash_encoding.workspace = true
zcash_protocol.workspace = true
zip32.workspace = true

# Dependencies exposed in a public API:
# (Breaking upgrades to these require a breaking upgrade to this crate.)
# - CSPRNG
rand.workspace = true
rand_core.workspace = true

# - Digests (output types exposed)
blake2b_simd.workspace = true
sha2.workspace = true

# - Logging and metrics
memuse.workspace = true
tracing = { workspace = true, default-features = false }

# - Secret management
subtle.workspace = true

# - Shielded protocols
ff.workspace = true
group.workspace = true
jubjub.workspace = true
nonempty.workspace = true
orchard.workspace = true
sapling.workspace = true
zcash_spec.workspace = true

# - Note Commitment Trees
incrementalmerkletree = { workspace = true, features = ["legacy-api"] }

# - Test dependencies
proptest = { workspace = true, optional = true }

# - Transparent protocol
transparent.workspace = true

# - Transparent inputs
#   - `Error` type exposed
bip32.workspace = true
#   - `SecretKey` and `PublicKey` types exposed
secp256k1 = { workspace = true, optional = true }

# Dependencies used internally:
# (Breaking upgrades to these are usually backwards-compatible, but check MSRVs.)
# - Boilerplate
getset.workspace = true

# - Documentation
document-features = { workspace = true, optional = true }

# - Encodings
bs58.workspace = true
hex.workspace = true

# - Shielded protocols
redjubjub.workspace = true

# - Transparent protocol
ripemd.workspace = true

# - ZIP 32
fpe.workspace = true

# No-std support
core2.workspace = true

[dependencies.zcash_note_encryption]
workspace = true
features = ["pre-zip-212"]

[dev-dependencies]
chacha20poly1305 = "0.10"
criterion.workspace = true
incrementalmerkletree = { workspace = true, features = ["legacy-api", "test-dependencies"] }
proptest.workspace = true
assert_matches.workspace = true
rand_xorshift.workspace = true
transparent = { workspace = true, features = ["test-dependencies"] }
sapling = { workspace = true, features = ["test-dependencies"] }
orchard = { workspace = true, features = ["test-dependencies"] }
zcash_protocol = { workspace = true, features = ["test-dependencies"] }

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }

[features]
default = ["multicore", "std", "circuits"]
std = ["document-features", "redjubjub/std"]

## Enables creating proofs
circuits = ["orchard/circuit", "sapling/circuit"]

## Enables multithreading support for creating proofs.
multicore = ["orchard/multicore", "sapling/multicore"]

## Enables spending transparent notes with the transaction builder.
transparent-inputs = [
    "transparent/transparent-inputs",
    "bip32/secp256k1-ffi",
    "dep:secp256k1",
]

### A temporary feature flag that exposes granular APIs needed by `zcashd`. These APIs
### should not be relied upon and will be removed in a future release.
temporary-zcashd = []

## Exposes APIs that are useful for testing, such as `proptest` strategies.
test-dependencies = [
    "dep:proptest",
    "incrementalmerkletree/test-dependencies",
    "orchard/test-dependencies",
    "sapling/test-dependencies",
    "transparent/test-dependencies",
    "zcash_protocol/test-dependencies",
]

## A feature used to isolate tests that are expensive to run. Test-only.
expensive-tests = []

## A feature that provides `FeeRule` implementations and constructors for
## non-standard fees.
non-standard-fees = []

[lib]
bench = false

[[bench]]
name = "note_decryption"
harness = false

[badges]
maintenance = { status = "actively-developed" }

[lints]
workspace = true
