[package]
name = "zcash_proofs"
description = "Zcash zk-SNARK circuits and proving APIs"
version = "0.13.0-rc.1"
authors = [
    "Jack Grigg <jack@z.cash>",
]
homepage = "https://github.com/zcash/librustzcash"
repository = "https://github.com/zcash/librustzcash"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.65"
categories = ["cryptography::cryptocurrencies"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
zcash_primitives = { version = "=0.13.0-rc.1", path = "../zcash_primitives", default-features = false }

# Dependencies exposed in a public API:
# (Breaking upgrades to these require a breaking upgrade to this crate.)
bellman = { version = "0.14", default-features = false, features = ["groth16"] }
bls12_381 = "0.8"
group = "0.13"
jubjub = "0.10"
lazy_static = "1"
minreq = { version = "2", features = ["https"], optional = true }
rand_core = "0.6"
tracing = "0.1"

# Dependencies used internally:
# (Breaking upgrades to these are usually backwards-compatible, but check MSRVs.)
blake2b_simd = "1"
home = { version = "0.5", optional = true }
known-folders = { version = "1", optional = true }
redjubjub = "0.7"
wagyu-zcash-parameters = { version = "0.2", optional = true }
xdg = { version = "2.5", optional = true }

[dev-dependencies]
byteorder = "1"
criterion = "0.4"
rand_xorshift = "0.3"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.11", features = ["criterion", "flamegraph"] } # MSRV 1.56

[features]
default = ["local-prover", "multicore"]
bundled-prover = ["wagyu-zcash-parameters"]
directories = ["dep:home", "dep:known-folders", "dep:xdg"]
download-params = ["minreq", "directories"]
local-prover = ["directories"]
multicore = ["bellman/multicore", "zcash_primitives/multicore"]

[lib]
bench = false

[[bench]]
name = "sapling"
harness = false
required-features = ["local-prover"]

[[example]]
name = "get-params-path"
required-features = ["directories"]

[[example]]
name = "download-params"
required-features = ["download-params"]

[[example]]
name = "download-sprout-and-sapling-params"
required-features = ["download-params"]

[badges]
maintenance = { status = "actively-developed" }
