[package]
name = "zcash_proofs"
description = "Zcash zk-SNARK circuits and proving APIs"
version = "0.13.0"
authors = [
    "Jack Grigg <jack@z.cash>",
]
homepage = "https://github.com/zcash/librustzcash"
repository.workspace = true
readme = "README.md"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
zcash_primitives.workspace = true

# Dependencies exposed in a public API:
# (Breaking upgrades to these require a breaking upgrade to this crate.)
bellman = { version = "0.14", default-features = false, features = ["groth16"] }
bls12_381.workspace = true
group.workspace = true
jubjub.workspace = true
lazy_static.workspace = true
minreq = { version = "2", features = ["https"], optional = true }
rand_core.workspace = true
tracing.workspace = true

# Dependencies used internally:
# (Breaking upgrades to these are usually backwards-compatible, but check MSRVs.)
blake2b_simd.workspace = true
home = { version = "0.5", optional = true }
known-folders = { version = "1", optional = true }
redjubjub = "0.7"
wagyu-zcash-parameters = { version = "0.2", optional = true }
xdg = { version = "2.5", optional = true }

[dev-dependencies]
byteorder.workspace = true
criterion.workspace = true
rand_xorshift.workspace = true

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.11", features = ["criterion", "flamegraph"] } # MSRV 1.56

[features]
default = ["local-prover", "multicore"]
bundled-prover = ["wagyu-zcash-parameters"]
directories = ["dep:home", "dep:known-folders", "dep:xdg"]
download-params = ["minreq", "directories"]
local-prover = ["directories"]
multicore = ["bellman/multicore", "zcash_primitives/multicore"]

[lib]
bench = false

[[bench]]
name = "sapling"
harness = false
required-features = ["local-prover"]

[[example]]
name = "get-params-path"
required-features = ["directories"]

[[example]]
name = "download-params"
required-features = ["download-params"]

[[example]]
name = "download-sprout-and-sapling-params"
required-features = ["download-params"]

[badges]
maintenance = { status = "actively-developed" }
